<resources>

    <string name="app_name">ContentProviderDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="url_label">Enter URL: </string>
    <string name="download_button">DL</string>
    <string name="query_button">query()</string>
    <string name="cursor_loader_button">CL</string>
    <string name="async_query_handler_button">AQH</string>
    <string name="reset_button">Reset</string>
    <string name="default_url">http://boxinasuitcase.com/media/blogs/box/BSOD.jpg</string>

</resources>